Bug 502198 - No option to force an app to run on Discrete Graphics
Summary: No option to force an app to run on Discrete Graphics
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 502623 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-30 09:43 UTC by sk1199
Modified: 2025-05-11 04:19 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sk1199 2025-03-30 09:43:16 UTC
SUMMARY
Since commit e2cf9879 - https://invent.kde.org/plasma/plasma-workspace/-/commit/e2cf9879 if you want to run an app on discrete graphics, you have to first edit the app with kmenuedit, then go to ~/.local/share/applications and edit the file properties from there.

STEPS TO REPRODUCE
1. Open Kickoff
2. Select an app to edit
3. No option for Discrete graphics

OBSERVED RESULT
No option for discrete graphics

EXPECTED RESULT
An option for discrete graphics

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 41
KDE Plasma Version: 6.3.3 
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-04-01 14:41:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kmenuedit/-/merge_requests/44
Comment 2 Nate Graham 2025-04-10 14:40:48 UTC
*** Bug 502623 has been marked as a duplicate of this bug. ***
Comment 3 Oliver Beard 2025-04-22 09:31:47 UTC
Git commit b559cb8f487b5ba66d9fe9f471b01b6e2ca4d8bf by Oliver Beard.
Committed on 11/04/2025 at 21:45.
Pushed by ngraham into branch 'master'.

basictab: Add option for GPU handling
This commit introduces the option to configure the keys PrefersNonDefaultGPU/X-KDE-RunOnDiscreteGpu. Both are considered, but the latter is a fallback and not updated.

It has the same implementation as the file properties dialog, but cannot be contextually disabled (KIO::hasDiscreteGpu is not exposed).
FIXED-IN: 6.4

M  +23   -0    basictab.cpp
M  +2    -0    basictab.h

https://invent.kde.org/plasma/kmenuedit/-/commit/b559cb8f487b5ba66d9fe9f471b01b6e2ca4d8bf