basictab: Add option for GPU handling This commit introduces the option to configure the keys PrefersNonDefaultGPU/X-KDE-RunOnDiscreteGpu. Both are considered, but the latter is a fallback and not updated.

It has the same implementation as the file properties dialog, but cannot be contextually disabled (KIO::hasDiscreteGpu is not exposed).

BUG: 502198
FIXED-IN: 6.4